# silhouette

./: .gitignore  pyproject.toml
tests/: test_silhouette.py
