[tool.poetry]
name = "silhouette"
version = "0.0.1-alpha"
description = ""
authors = ["tnahs <31777797+tnahs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
